2005-08-06  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IResource.cs
	  Mono.Cecil.Implem/AssemblyLinkedResource.cs
	  Mono.Cecil.Implem/EmbeddedResource.cs
	  Mono.Cecil.Implem/LinkedResource.cs
	  Mono.Cecil.Implem/Resource.cs:
		Rename field Attributes to Flags for the sake of consistency.
	* Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/StructureWriter.cs:
		On going work on the writing layer.
	* Mono.Cecil.Implem/StructureReader.cs:
		Style.

	* Mono.Cecil/IAssemblyName.cs
	  Mono.Cecil.Implem/AssemblyName.cs
	  Mono.Cecil.Implem/StructureReader.cs:
		Add an AssemblyFlag property to an IAssemblyNameReference,
		implement it, and read it.

2005-08-04  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs:
		set a correct name to nameless parameters

	* Mono.Cecil.Signatures/SignatureReader.cs:
		don't crash on null custom attributes

2005-08-03  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/OpCodes.cs
	  Mono.Cecil.Cil/OpCodes.cs
	  Mono.Cecil.Cil/OpCode.cs:
		Revert modifications to reduce code. OpCodes::.ctors were
		not called.

	* Mono.Cecil.Implem/ReflectionReader.cs:
		Make sure parameters are read even if there is no
		corresponding Param row. Thanks Cesar for the hint.

	* Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/UserStringsHeap.cs
	  Mono.Cecil.Metadata/GuidHeap.cs
	  Mono.Cecil.Implem/CodeReader.cs:
		On going work on the writing layer

	* CodeGen/cecil-gen.rb
	  CodeGen/cecil-gen-sources.rb
		make executable
	* *.*: set svn:eol-style to native

	* Mono.Cecil/BaseStructureVisitor.cs
	  Mono.Cecil/BaseReflectionVisitor.cs
	  Mono.Cecil.Implem/BaseReflectionReader.cs:
		Add empty visitors for the sake of simplicity
	* Mono.Cecil.Implem/StructureReader.cs
	  Mono.Cecil.Implem/ReflectionReader.cs:
		Inherit new visitors

2005-08-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/AggressiveReflectionReader.cs