@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Fri Jul 29 12:05:46 CEST 2005
+ * Sat Aug 06 02:25:35 CEST 2005
  *
  *****************************************************************************/
 
@@ -23,14 +23,10 @@ namespace Mono.Cecil.Metadata {
 
 	internal sealed class MetadataRowWriter : IMetadataRowVisitor {
 
-		private MetadataTableWriter m_mtwv;
-		private MetadataRoot m_metadataRoot;
 		private IO.BinaryWriter m_binaryWriter;
 
 		public MetadataRowWriter (MetadataTableWriter mtwv)
 		{
-			m_mtwv = mtwv;
-			m_metadataRoot = mtwv.GetMetadataRoot ();
 			m_binaryWriter = mtwv.GetWriter ();
 		}
 
